--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <body>
       <p style="text-align: center;">Black Horses.</p>
       <a href="http://www.screenmirrorapp.com/">Black Horses</a>
+        <input type="tel">
     </body>
 </html>
