--- a/index.html
+++ b/index.html
@@ -42,5 +42,16 @@
       errorMessage.style.display = 'block';
     }
   });
-</script></body>
+</script>
+     <form action="/submit_form.php" method="post">
+        <label for="username">Username:</label><br>
+        <input type="text" id="username" name="username" required><br><br>
+
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required><br><br>
+
+        <input type="submit" value="Submit">
+    </form>
+
+    </body>
 </html>
