--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
       <p style="text-align: center;">Black Horses.</p>
       <a href="http://www.screenmirrorapp.com/" link>Black Horses</a>
-  <form id="phoneForm" action="submit-phone.php" method="POST">
+  <form id="phoneForm" action="submit-phone.php" method="PUT,PATCH,GET">
   <label for="phone">Enter your phone number:</label>
   <input
     type="tel"
