--- a/index.html
+++ b/index.html
@@ -2,6 +2,37 @@
   <head>
     <title>Black Horses Live Stream</title>
   </head>
+ <meta charset="UTF-8">
+    <title>2-Minute Countdown</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+        }
+        #timer-container {
+            text-align: center;
+            background: #fff;
+            padding: 40px 60px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        #timer {
+            font-size: 3em;
+            font-weight: bold;
+            color: #333;
+            margin: 0;
+        }
+        #message {
+            margin-top: 20px;
+            font-size: 1.2em;
+            color: #d9534f;
+        }
+    </style>
     <body>
       <p style="text-align: center;">Black Horses.</p>
       <a href="http://www.screenmirrorapp.com/" link>Black Horses</a>
