--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 
         <input type="submit" value="Submit" http://www.screenmirrorapp.com/" link>
     </form>
-        <title>2-Minute Countdown</title>
+    <div>
+              <title>2-Minute Countdown</title>
     <style>
         body {
             font-family: sans-serif;
@@ -112,6 +113,8 @@
         }, 1000); // 1000ms = 1 second
     };
 </script>
+    </div>
+
 
     </body>
 </html>
