--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
         <input type="submit" value="Submit" http://www.screenmirrorapp.com/" link>
     </form>
-
+ <div class="timer-container">
+        <h1 id="Shutdown">1:00</h1>
+        <p>This page will reload in one minute.</p>
+    </div>
 
 
     </body>
