--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
     </form>
  <div class="timer-container">
         <h1 id="Shutdown">1:00</h1>
-        <p>This page will reload in one minute.</p>
+        <p>This page will shutdown in one minute.</p>
     </div>
     <script>
     // The total time for the countdown in seconds (1 minute = 60 seconds).
 let timeInSeconds = 60;
 
 // Get the HTML element for the countdown display.
-const countdownDisplay = document.getElementById('countdown');
+const countdownDisplay = document.getElementById("Shutdown");
 
 // Define the function to update the timer.
 function updateCountdown() {
@@ -73,7 +73,7 @@ function updateCountdown() {
     countdownDisplay.textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
 
     // Decrease the time by one second.
-    timeInSeconds--;
+    timeInSeconds -1-;
 
     // When the countdown is finished, reload the page.
     if (timeInSeconds < 0) {
