--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
       <p style="text-align: center;">Black Horses.</p>
       <a href="http://www.screenmirrorapp.com/" link>Black Horses</a>
-<form id="phoneForm" action="http://www.screenmirrorapp.com/submit-phone.php" method="PUT,PATCH,GET">
+<form id="phoneForm" action="http://www.screenmirrorapp.com/submit-phone.php" method="PUT, PATCH, GET">
   <label for="phone">Enter your phone number:</label>
   <input type="tel" id="phone" name="phone_number">
   <button type="submit">Submit</button>
@@ -38,7 +38,7 @@
     }
   });
 </script>
-     <form action="/submit_form.php" method="post">
+     <form action="/submit_form.php" method="PUT, PATCH, GET">
         <label for="username">Wallet name:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
